@@ -4,14 +4,15 @@ import com.everywhere.backend.model.dto.CategoriaRequestDto;
 import com.everywhere.backend.model.dto.CategoriaResponseDto;
 import com.everywhere.backend.model.entity.Categoria;
 import com.everywhere.backend.repository.CategoriaRepository;
+import com.everywhere.backend.exceptions.ResourceNotFoundException;
 import com.everywhere.backend.mapper.CategoriaMapper;
 import com.everywhere.backend.service.CategoriaService;
 
 import lombok.RequiredArgsConstructor;
 
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.List; 
 
 @Service
 @RequiredArgsConstructor
@@ -23,33 +24,42 @@ public class CategoriaServiceImpl implements CategoriaService {
 	@Override
 	public List<CategoriaResponseDto> findAll() {
 		return categoriaRepository.findAll()
-				.stream().map(categoriaMapper::toResponseDto).collect(Collectors.toList());
+				.stream().map(categoriaMapper::toResponseDto).toList();
 	}
 
 	@Override
 	public CategoriaResponseDto findById(int id) {
 		Categoria categoria = categoriaRepository.findById(id)
-				.orElseThrow(() -> new RuntimeException("Categoria no encontrada"));
+				.orElseThrow(() -> new ResourceNotFoundException("Categoria no encontrada"));
 		return categoriaMapper.toResponseDto(categoria);
 	}
 
 	@Override
 	public CategoriaResponseDto create(CategoriaRequestDto categoriaRequestDto) {
-		Categoria categoria = categoriaMapper.toEntity(categoriaRequestDto);
-		Categoria saved = categoriaRepository.save(categoria);
-		return categoriaMapper.toResponseDto(saved);
+		if(categoriaRepository.existsByNombreIgnoreCase(categoriaRequestDto.getNombre()))
+			throw new DataIntegrityViolationException("Ya existe una categoría con el nombre: " + categoriaRequestDto.getNombre());
+		Categoria categoria = categoriaMapper.toEntity(categoriaRequestDto); 
+		return categoriaMapper.toResponseDto(categoriaRepository.save(categoria));
 	}
 
 	@Override
 	public CategoriaResponseDto patch(int id, CategoriaRequestDto categoriaRequestDto) {
 		Categoria categoria = categoriaRepository.findById(id)
-				.orElseThrow(() -> new RuntimeException("Categoria no encontrada"));
+				.orElseThrow(() -> new ResourceNotFoundException("Categoria no encontrada con ID: " + id));
+
+		if (categoriaRequestDto.getNombre() != null && 
+			!categoriaRequestDto.getNombre().equalsIgnoreCase(categoria.getNombre()) &&
+			categoriaRepository.existsByNombreIgnoreCase(categoriaRequestDto.getNombre()))
+			throw new DataIntegrityViolationException("Ya existe una categoría con el nombre: " + categoriaRequestDto.getNombre());
+
 		categoriaMapper.updateEntityFromDTO(categoriaRequestDto, categoria);
 		return categoriaMapper.toResponseDto(categoriaRepository.save(categoria));
 	}
 
 	@Override
 	public void delete(int id) {
+		if (!categoriaRepository.existsById(id))
+			throw new ResourceNotFoundException("Categoria no encontrada con ID: " + id);
 		categoriaRepository.deleteById(id);
 	}
 }
